--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@prisma/client": "^5.15.1",
         "bcrypt": "^5.1.1",
         "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
         "date-fns": "^3.6.0",
         "debug": "~2.6.9",
         "dotenv": "^16.4.5",
@@ -29,6 +30,7 @@
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.7",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/lodash": "^4.17.5",
