--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "tap-game-be",
     "version": "0.0.0",
     "private": true,
+    "engines": {
+        "node": ">=18.20.0",
+        "npm": ">=10.5.0",
+        "yarn": "Please use npm instead"
+    },
     "scripts": {
         "start": "npm run db:generate && tsc && node dist/app.js",
         "dev": "nodemon app.ts",
@@ -12,7 +17,7 @@
         "@prisma/client": "^5.15.1",
         "@ton/core": "^0.53.0",
         "@ton/crypto": "^3.2.0",
-        "@ton/ton": "^13.11.2",
+        "@ton/ton": "13.8",
         "bcrypt": "^5.1.1",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
